# mr-ai

./: .gitignore  LICENSE.md
mr-ai-backend/: .gitignore  Cargo.toml  README.md  bootstrap_ollama.sh  docker-compose.yml
mr-ai-backend/ai-llm-service/: Cargo.toml
mr-ai-backend/ai-llm-service/src/: error_handler.rs  health_service.rs  lib.rs  service_profiles.rs  telemetry.rs
mr-ai-backend/ai-llm-service/src/config/: default_config.rs  llm_model_config.rs  llm_provider.rs  mod.rs
mr-ai-backend/ai-llm-service/src/services/: mod.rs  ollama_service.rs  open_ai_service.rs
mr-ai-backend/api/: Cargo.toml
mr-ai-backend/api/src/: error_handler.rs  lib.rs
mr-ai-backend/api/src/core/: app_state.rs  mod.rs
mr-ai-backend/api/src/core/http/: mod.rs  response_envelope.rs
mr-ai-backend/api/src/middleware_layer/: json_extractor.rs  mod.rs
mr-ai-backend/api/src/models/: git_projects_data.rs  mod.rs
mr-ai-backend/api/src/routes/: ask_question_route.rs  learn_code_route.rs  mod.rs  prepare_graph_route.rs  prepare_qdrant_route.rs  upload_project_data.rs
mr-ai-backend/api/src/routes/ask/: ask_question_route.rs  ask_request.rs  mod.rs
mr-ai-backend/api/src/routes/check_mr/: mod.rs  trigger_mr_request.rs  trigger_mr_response.rs  trigger_mr_route.rs
mr-ai-backend/api/src/routes/project_indexer/: mod.rs  project_indexer_response.rs  project_indexer_route.rs
mr-ai-backend/api/src/routes/rag_base/: mod.rs  search_vector_base_reqest.rs  search_vector_base_response.rs  search_vector_base_route.rs  vector_base_index_response.rs  vector_base_index_route.rs
mr-ai-backend/api/src/routes/sync_git/: mod.rs  sync_git_request.rs  sync_git_response.rs  sync_git_route.rs
mr-ai-backend/api/src/routes/trigger_gitlab_mr/: mod.rs  trigger_gitlab_mr_request.rs  trigger_gitlab_mr_route.rs
mr-ai-backend/code-graph/: Cargo.toml
mr-ai-backend/code-indexer/: Cargo.toml
mr-ai-backend/code-indexer/src/: errors.rs  lib.rs  types.rs
mr-ai-backend/code-indexer/src/ast/: dart.rs  generic_text.rs  interface.rs  javascript.rs  mod.rs  router.rs  rust.rs  typescript.rs
mr-ai-backend/code-indexer/src/ast/dart/: ast_dump.rs  dart_extras.rs  extract.rs  lang.rs  mod.rs  provider.rs  query.rs  util.rs
mr-ai-backend/code-indexer/src/lsp/: dart.rs  interface.rs  mod.rs  stub.rs
mr-ai-backend/code-indexer/src/lsp/dart/: ast.rs  client.rs  dart_parse.rs  dart_provider.rs  extras.rs  merge.rs  mod.rs  parse.rs  util.rs
mr-ai-backend/code-indexer/src/util/: fs_scan.rs  jsonl.rs  microchunk.rs  mod.rs
mr-ai-backend/codegraph-prep/: Cargo.toml
mr-ai-backend/codegraph-prep/src/: lib.rs  run.rs
mr-ai-backend/codegraph-prep/src/config/: mod.rs  model.rs
mr-ai-backend/codegraph-prep/src/core/: chunking.rs  debug_ast.rs  fs_scan.rs  ids.rs  mod.rs  normalize.rs  parse.rs  summary.rs  traits.rs
mr-ai-backend/codegraph-prep/src/export/: graphml.rs  jsonl.rs  mod.rs  qdrant_prep.rs  save_all.rs
mr-ai-backend/codegraph-prep/src/graph/: calls.rs  dart_linker.rs  dispatcher.rs  generic.rs  merge.rs  mod.rs  py_linker.rs  rs_linker.rs  ts_linker.rs
mr-ai-backend/codegraph-prep/src/languages/: mod.rs
mr-ai-backend/codegraph-prep/src/languages/dart/: decls.rs  directives.rs  docsig.rs  (+4 more)
mr-ai-backend/codegraph-prep/src/model/: ast.rs  graph.rs  language.rs  mod.rs  neighbors.rs  payload.rs  qdrant.rs  span.rs
mr-ai-backend/contextor/: Cargo.toml
mr-ai-backend/contextor/src/: api_types.rs  cfg.rs  error.rs  lib.rs  llm.rs  progress.rs  prompt.rs  retrieve.rs  select.rs
mr-ai-backend/git-context-engine/: Cargo.toml
mr-ai-backend/git-context-engine/src/: errors.rs  lib.rs  parser.rs
mr-ai-backend/git-context-engine/src/git_providers/: bitbucket.rs  github.rs  gitlab.rs  mod.rs  types.rs
mr-ai-backend/graph-prepare/: Cargo.toml
mr-ai-backend/graph-prepare/src/: ast.rs  graph.rs  lib.rs  parce.rs
mr-ai-backend/graph-prepare/src/export/: mod.rs  save_all.rs  save_graphml.rs  save_json.rs
mr-ai-backend/graph-prepare/src/extracts_ast/: dart_extract.rs  javascript_extract.rs  mod.rs  python_extract.rs  rust_extract.rs  typescript_extract.rs
mr-ai-backend/graph-prepare/src/graphs/: dart_graph.rs  edge.rs  generic_graph.rs  merge.rs  mod.rs
mr-ai-backend/graph-prepare/src/models/: ast_node.rs  graph_node.rs  mod.rs
mr-ai-backend/mr-reviewer/: Cargo.toml
mr-ai-backend/mr-reviewer/src/: cache.rs  errors.rs  lib.rs
mr-ai-backend/mr-reviewer/src/git_providers/: bitbucket.rs  github.rs  gitlab.rs  mod.rs  types.rs
mr-ai-backend/mr-reviewer/src/lang/: mod.rs
mr-ai-backend/mr-reviewer/src/map/: mod.rs
mr-ai-backend/mr-reviewer/src/parser/: mod.rs
mr-ai-backend/mr-reviewer/src/publish/: gitlab.rs  mod.rs
mr-ai-backend/mr-reviewer/src/review/: context.rs  dedup_llm.rs  llm.rs  llm_ext.rs  mod.rs  policy.rs  prompt.rs  rag_support.rs  util.rs
mr-ai-backend/mr-reviewer/src/telemetry/: mod.rs  prompt_dump.rs
mr-ai-backend/project_code_store/: Cargo.toml
mr-ai-backend/project_code_store/src/: errors.rs  lib.rs
mr-ai-backend/rag-base/: Cargo.toml  README.md
mr-ai-backend/rag-base/src/: embedding.rs  jsonl_reader.rs  lib.rs  search.rs  stitcher.rs  vector_db.rs
mr-ai-backend/rag-base/src/errors/: mod.rs  rag_base_error.rs
mr-ai-backend/rag-base/src/structs/: mod.rs  rag_base_config.rs  rag_store.rs  search_result.rs
mr-ai-backend/rag-store/: Cargo.toml
mr-ai-backend/rag-store/src/: config.rs  discovery.rs  embed.rs  embed_pool.rs  errors.rs  filters.rs  ingest.rs  io_jsonl.rs  lib.rs  mappers.rs  normalize.rs  qdrant_facade.rs  record.rs  retrieve.rs
mr-ai-backend/rag-store/src/embed/: mod.rs  noop_embedder.rs  ollama.rs
mr-ai-backend/rules/dart/: dart_3_updates.md
mr-ai-backend/rules/global/: general_review.md
mr-ai-backend/services/: Cargo.toml
mr-ai-backend/services/src/: git.rs  lib.rs  uuid.rs
mr-ai-backend/src/: main.rs
mr-ai-backend/ssh_keys/: bot_key  bot_key.pub
mr-ai-backend/vector-lib/: Cargo.toml
mr-ai-backend/vector-lib/src/: ask.rs  chunk.rs  chunker.rs  embeddings.rs  ingest.rs  lib.rs  models.rs  neighbors.rs  ollama.rs  qdrant.rs  query.rs
(+19 files in other folders)
