[package]
name = "mr-ai-backend"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "ai-llm-service", "ai-service", "api", "codegraph-prep", "contextor", "mr-reviewer",  "rag-store", "services"]

[dependencies]
api = { path = "api" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dotenvy = "0.15"

[workspace.dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12"}
thiserror = "1.0"
