[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }

axum = "0.8"

services = { path = "../services" }
codegraph-prep = { path = "../codegraph-prep" }
rag-store = { path = "../rag-store" }
contextor = {path = "../contextor"}
mr-reviewer = {path = "../mr-reviewer"}
ai-llm-service = { path = "../ai-llm-service" }


serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
