[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }

axum = "0.8"

ai-llm-service = { path = "../ai-llm-service" }
code-indexer = { path = "../code-indexer" }
services = { path = "../services" }
codegraph-prep = { path = "../codegraph-prep" }
rag-store = { path = "../rag-store" }
contextor = {path = "../contextor"}
mr-reviewer = {path = "../mr-reviewer"}
project-code-store = { path = "../project_code_store" }


serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
