[package]
name = "codegraph-prep"
version = "0.1.0"
edition = "2024"

[dependencies]
# AST core
tree-sitter = "0.22.6"

# Grammars
tree-sitter-rust = "0.21"
tree-sitter-dart = "0.0.4"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"

# FS & path utils
walkdir = "2.5"
dunce = "1"
globset = "0.4"

# Graph
petgraph = "0.8"

# Serialization & configs
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"

# Utilities
regex = "1.11"
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }


# Deterministic IDs for records (e.g., Qdrant points)
uuid = { version = "1", features = ["v5"] }
