[package]
name = "contextor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

rag-store = { path = "../rag-store" }

indicatif = { version = "0.17" }
