[package]
name = "git-context-engine"
version = "0.1.0"
edition = "2024"
authors = ["Yeftifeyev Konstantin <zoxo@outlook.com>"]
license = "FSL-1.1"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
urlencoding = "2.1"
