[package]
name = "mr-reviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11"
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }

codegraph-prep = { path = "../codegraph-prep" }
contextor = { path = "../contextor" }

ai-llm-service = { path = "../ai-llm-service" }


# crate-local deps
sha2 = "0.10"
urlencoding = "2.1"
lazy_static = "1.5"
