[package]
name = "project_code_store"
version = "0.1.0"
edition = "2024"
authors = ["Yeftifeyev Konstantin <zoxo@outlook.com>"]
license = "FSL-1.1"
description = "Async Git project fetcher built on gix (gitoxide) with Tokio, thiserror-based errors, and tracing instrumentation."
keywords = ["git", "gix", "gitoxide", "clone", "async", "tokio"]
categories = ["development-tools", "command-line-utilities", "network-programming"]

[dependencies]
gix = { version = "0.73", default-features = false, features = ["blocking-network-client", "worktree-mutation"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
