[package]
name = "rag-base"
version = "0.1.0"
edition = "2024"

[dependencies]

# Qdrant Rust client (we will use gRPC in the implementation phase)
qdrant-client = { version = "1.15", default-features = false, features = ["grpc"] }

tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
