[package]
name = "vector-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
graph-prepare = { path = "../graph-prepare" }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = {workspace = true}
tokio = { workspace = true }

futures = "0.3"
qdrant-client = "1.15"

reqwest = { version = "0.12", features = ["json", "blocking"] }
